--- a/package.json
+++ b/package.json
@@ -4,53 +4,53 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node dist/index.js",
-      "dev": "tsc-watch --onSuccess \"node ./dist/index.js\"",
-      "build": "tsc",
-      "postinstall": "npm run build"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node ./dist/index.js",
+        "dev": "tsc-watch --onSuccess \"node ./dist/index.js\"",
+        "build": "tsc",
+        "postinstall": "npm run build"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-      "@types/bcrypt": "^5.0.0",
-      "@types/compression": "^1.7.2",
-      "@types/cors": "^2.8.13",
-      "@types/express": "^4.17.17",
-      "@types/jsonwebtoken": "^9.0.1",
-      "@types/morgan": "^1.9.4",
-      "@types/node": "^18.13.0",
-      "@typescript-eslint/eslint-plugin": "^5.52.0",
-      "@typescript-eslint/parser": "^5.52.0",
-      "eslint": "^8.34.0",
-      "eslint-config-prettier": "^8.6.0",
-      "eslint-plugin-prettier": "^4.2.1",
-      "prettier": "^2.8.4",
-      "tsc-watch": "^6.0.0",
-      "typescript": "^4.9.5"
+        "@types/bcrypt": "^5.0.0",
+        "@types/compression": "^1.7.2",
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.17",
+        "@types/jsonwebtoken": "^9.0.1",
+        "@types/morgan": "^1.9.4",
+        "@types/node": "^18.13.0",
+        "@typescript-eslint/eslint-plugin": "^5.52.0",
+        "@typescript-eslint/parser": "^5.52.0",
+        "eslint": "^8.34.0",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "prettier": "^2.8.4",
+        "tsc-watch": "^6.0.0",
+        "typescript": "^4.9.5"
     },
     "dependencies": {
-      "bcrypt": "^5.1.0",
-      "compression": "^1.7.4",
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.3",
-      "envalid": "^7.3.1",
-      "express": "^4.18.2",
-      "helmet": "^6.0.1",
-      "joi": "^17.7.1",
-      "jsonwebtoken": "^9.0.0",
-      "module-alias": "^2.2.2",
-      "mongoose": "^6.9.1",
-      "morgan": "^1.10.0"
+        "bcrypt": "^5.1.0",
+        "compression": "^1.7.4",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "envalid": "^7.3.1",
+        "express": "^4.18.2",
+        "helmet": "^6.0.1",
+        "http-status": "^1.6.2",
+        "joi": "^17.7.1",
+        "jsonwebtoken": "^9.0.0",
+        "module-alias": "^2.2.2",
+        "mongoose": "^6.9.1",
+        "morgan": "^1.10.0"
     },
     "_moduleAliases": {
-      "@/models": "dist/models",
-      "@/utils": "dist/utils",
-      "@/services": "dist/services",
-      "@/middleware": "dist/middleware",
-      "@/controller": "dist/controller",
-      "@/routes": "dist/routes"
+        "@/models": "dist/models",
+        "@/utils": "dist/utils",
+        "@/services": "dist/services",
+        "@/middleware": "dist/middleware",
+        "@/controller": "dist/controller",
+        "@/routes": "dist/routes"
     }
-  }
-  
+}
